<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">
    
    <TextView
        android:id="@id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_title"
        android:textSize="@dimen/text_h1"
        android:color="@color/green" />

    <TextView
        android:id="@+id/about_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/about_title"
        android:text="@string/splash_subtitle"
        android:textSize="@dimen/text_h2"
        android:color="@color/green" />
    
    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="version 1.0"
        android:textSize="@dimen/text_small"
        android:color="@color/green" />
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_subtitle"
        android:background="@drawable/panel_green"
        >
        
        <LinearLayout 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text"/>
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_license"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>